removes unwanted files 1

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Vizox | Visa & Immigrations HTML Template | Home Page 03</title>
+  <title>AimBritz | Study Abroad</title>
   <!-- Stylesheets -->
   <link href="css/bootstrap.min.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
   <link href="css/responsive.css" rel="stylesheet" />
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-  <link rel="icon" href="images/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="images/cropped-aimbritz-32x32.png" type="image/x-icon" />
+  <link rel="icon" href="images/cropped-aimbritz-32x32.png" type="image/x-icon" />
   <style>
     .modal-backdrop {
       z-index: -1;
@@ -61,15 +61,6 @@
             <small>Call Anytime</small><br />
             +91 9747277233
           </a>
-          <div class="ui-btn-outer">
-            <button class="ui-btn ui-btn search-btn">
-              <span class="icon lnr lnr-icon-search"></span>
-            </button>
-          </div>
-          <!-- Mobile Nav toggler -->
-          <div class="mobile-nav-toggler">
-            <span class="icon lnr-icon-bars"></span>
-          </div>
         </div>
       </div>
       <!-- End Main Box -->
@@ -1374,9 +1365,7 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body">
-            <img
-              src="images/WhatsApp Image 2024-02-14 at 1.46.05 PM.jpeg"
-              class="img-fluid" alt="">
+            <img src="images/WhatsApp Image 2024-02-14 at 1.46.05 PM.jpeg" class="img-fluid" alt="">
           </div>
         </div>
       </div>
@@ -1398,7 +1387,7 @@
     <script src="js/pop-up.js"></script>
     <script>
       // Function to show the modal after a 2-second timeout
-      setTimeout(function() {
+      setTimeout(function () {
         $('#exampleModallg').modal('show');
       }, 3000); // 2000 milliseconds = 2 seconds
     </script>
