--- a/page-contact.html
+++ b/page-contact.html
@@ -3,15 +3,15 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Vizox | Visa & Immigrations HTML Template</title>
+  <title>AimBritz | Study Abroad</title>
   <!-- Stylesheets -->
   <link href="css/bootstrap.min.css" rel="stylesheet" />
 
   <link href="css/style.css" rel="stylesheet" />
   <link href="css/responsive.css" rel="stylesheet" />
 
-  <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
-  <link rel="icon" href="images/favicon.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="images/cropped-aimbritz-32x32.png" type="image/x-icon" />
+  <link rel="icon" href="images/cropped-aimbritz-32x32.png" type="image/x-icon" />
 
   <!-- Responsive -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -62,17 +62,6 @@
             <small>Call Anytime</small><br />
             +91 8877889942
           </a>
-
-          <div class="ui-btn-outer">
-            <button class="ui-btn ui-btn search-btn">
-              <span class="icon lnr lnr-icon-search"></span>
-            </button>
-          </div>
-
-          <!-- Mobile Nav toggler -->
-          <div class="mobile-nav-toggler">
-            <span class="icon lnr-icon-bars"></span>
-          </div>
         </div>
       </div>
       <!-- End Main Box -->
@@ -497,9 +486,9 @@
         .then(async (response) => {
           console.log(await response.json());
           const resp = await response.json()
-          if(resp.status){
+          if (resp.status) {
             alert("Thank you! your form is submitted successfully.");
-          }else{
+          } else {
             alert("Error.");
           }
         })
