--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       z-index: -1;
     }
   </style>
+  <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="3e49c5cb-0362-4332-ab14-100c10d77216";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
   <!-- Responsive -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
