--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </div>
         <!-- Slide Item -->
         <div class="slide-item">
-          <div class="bg-image" style="background-image: url(images/slide4.jpg)"></div>
+          <div class="bg-image" style="background-image: url(images/background/Designer.png)"></div>
           <div class="auto-container">
             <div class="content-box">
               <span class="sub-title animate-1">Visa Assistance</span>
